@@ -115,17 +115,7 @@
 	rulecolor=\color{gray},
 	tabsize=4,
 	captionpos=t,
-	morekeywords={install_github},
-	escapechar=?
-}
-
-
-\lstdefinelanguage{ft}{
-	language=[90]Fortran,
-	basicstyle=\ttfamily,
-	keywordstyle=\color{blue},
-	commentstyle=\color{dkgreen},
-	morecomment=[l]{!\ }
+	morekeywords={install_github, github, ngram, readLines, concat}
 }
 
 
