@@ -1,3 +1,6 @@
+2014-06-23:
+  * Fixed minor package issues.
+
 ======================= Log Before Release =====================================
 
 2014-06-22:
